# VectorFFT

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakePresets.json.bak  Cleanup Loop Strategy.md  FFT_Activity_Diagram.md  LICENSE  Prefetch Strategy.md  README.md  VECTORFFT_ARCHITECTURE.md  _bench_compilers.bat  _build_icx.bat  _build_icx_ex.bat  bench_compiler.c  build.bat  build.sh  modernizing_genfft.md  stride_executor_architecture.md  vcpkg.json  vfft_wisdom_tmp.txt
examples/: CMakeLists.txt  api_test.c  basic_fft.c  multithreaded_fft.c  quickstart.c  r2c_minimal.c  real_fft.c  spectrum_analyzer.c
examples/14900KF/: README.md
src/: CMakeLists.txt  README.md  adaptive_tuning.c  adaptive_tuning.h  convolve.c  convolve.h  cwtmath.c  dit_dif_design_note.md  fft_radix11.h  fft_radix13.h  fft_radix16.c  fft_radix16.h  fft_radix2.c  fft_radix2.h  fft_radix3.c  fft_radix3.h  fft_radix32.c  fft_radix32.h  fft_radix4.c  fft_radix4.h  fft_radix5.c  fft_radix5.h  fft_radix7.h  fft_radix8.c  fft_radix8.h  fft_types.h  highSpeedFFT.c  highspeedFFT.h  modwt.c  prefetch_strategy.c  prefetch_strategy.h  real.c  real.h  realVect.c  simd_math.h  simd_math_impl.h  simd_utils.h  throttle_enhanced.c  throttle_enhanced.h  vfft.c
src/0-dispatch/: dispatching strategy.md  fft_butterfly_dispatch.c  fft_butterfly_dispatch.h
src/1-plan/: fft_complex_soa.c  fft_complex_soa.h  fft_planning.c  fft_planning_types.h  highSpeedFFT.code-workspace  normalization_guide.md  system_architecture.md  test_fft_complex_soa.c
src/2-twiddles/: Blocked Layout SoA Twiddles.md  fft_radix16_twiddle_bridge.h  fft_twiddles_hybrid.c  fft_twiddles_hybrid.h  fft_twiddles_layout.h  fft_twiddles_planner.c  fft_twiddles_planner.h  fft_twiddles_reorganization.c  fft_twiddles_reorganization.h
src/3-execute/: CMakeLists.txt  bench_bluestein.c  fft_bitrev.c  fft_bluestein.h  fft_execute.c  fft_execute_internal.h  fft_fourstep.c  fft_fourstep.h  fft_recursive.c  test_integrated.c  test_planner.c  test_tw_fused.c  vfft_calibration.h  vfft_execute.h  vfft_planner.h  vfft_recursive.h  vfft_register_codelets.h  vfft_test_utils.h  vfft_wisdom.h
src/4-strides/: Data Layout Conversion.md
src/bluestein/: bluestein.c  bluestein.h  bluestein_advanced.c
src/common/: vfft_compat.h  vfft_mingw_shim.h
src/core/: NOTE.md  README.md  bluestein.h  bluestein_calibrator.h  compat.h  dct.h  dct4.h  dht.h  dp_planner.h  dst.h  env.h  executor.h  executor_blocked.h  exhaustive.h  factorizer.h  fft2d.h  fft2d_r2c.h  planner.h  r2c.h  rader.h  registry.h  vfft.c  vfft.h  wisdom_bridge.h  workspace.h
src/dag-fft-compiler/: README.md  build.sh
src/diffs/: dp_planner.h.diff  executor.h.diff  exhaustive.h.diff  planner.h.diff
src/fft_plan/: Mixed-Radix-Requirements.md  bit_reversal_cooley_tukey.md  clean_architecture.md  fft_execute.c  fft_fourstep.c  fft_normalize.c  fft_planning.c  fft_planning.h  fft_planning_types.h  fft_rader_plans.c  fft_rader_plans.h  fft_twiddles.c  fft_twiddles.h  fft_twiddles_hybrid.c  fft_twiddles_hybrid.h  fft_twiddles_planner_api.h  highSpeedFFT.code-workspace  requirements.md
src/mixed-radix/: fft_general_radix.h  fft_general_radix_fv.c  fft_general_radix_shared.h  ft_general_radix_bv.c
src/modwt/: modwt.h
src/old/: fft_radix11.c  fft_radix13.c  fft_radix16.c  fft_radix2.c  fft_radix3.c  fft_radix32.c  fft_radix32.h  fft_radix7.c
src/prefetch_strategy/: adaptive_tuning.c  prefetch_strategy.c
src/prototype/: README.md  SESSION_NOTES.md  SESSION_NOTES_2026_05.md  dune-project
src/prototype-bench/: README.md  bench_1d_vs_mkl.c  build_bench_1d_vs_mkl.sh
src/prototype-calibrator/: README.md  build_calibrate.sh  calibrate.c  run_calibrate.ps1
src/prototype-core/: README.md  compat.h  dp_planner.h  estimate_plan.h  executor.h  executor_generic.h  exhaustive_patient.h  exhaustive_plan.h  exhaustive_recursive.h  exhaustive_screened.h  plan.h  planner.h  twiddle.h  wisdom_reader.h
src/radix10/: CMakeLists.txt  fft_radix10_dif_dispatch.h  fft_radix10_dispatch.h  gen_r10_native_il.py  gen_radix10_n1.py  gen_radix10_tw.py
src/radix11/: CMakeLists.txt  CORRECTNESS_FIXES_COMPLETE.md  bench_final_r11.c  fft_radix11_avx2_n1_gen.h  fft_radix11_bv.c  fft_radix11_dispatch.h  fft_radix11_fv.c  fft_radix11_genfft.h  fft_radix11_macros.h  fft_radix11_macros_avx2.h  fft_radix11_macros_avx512.h  fft_radix11_macros_sse2.h  fft_radix11_scalar_n1_gen.h  fft_radix11_uniform.h  gen_radix11_n1.py  test_rader_dft11.c  test_radix11_walk.c
src/radix128/: fft_radix128_n1_gen_driver.h
src/radix13/: CMakeLists.txt  CMakeLists_r13.txt  RADIX13_IMPLEMENTATION_SUMMARY (1).md  RADIX13_IMPLEMENTATION_SUMMARY.md  bench_final_r13.c  fft_radix13_bv.c  fft_radix13_dispatch.h  fft_radix13_fv.c  fft_radix13_genfft.h  fft_radix13_macros.h  fft_radix13_macros_avx2.h  fft_radix13_macros_avx512.h  fft_radix13_macros_scalar.h  fft_radix13_macros_sse2.h  fft_radix13_uniform.h
src/radix16/: CMakeLists.txt  ILP handling.md  K-Tiling for Twiddle Cache Optimization.md  Port Saturation in Radix-16.md  REFACTORING_COMPLETE_SUMMARY.md  TUNING_QUICK_REFERENCE.md  fft_radix16_bv.c  fft_radix16_dif_dispatch.h  fft_radix16_dispatch.h  fft_radix16_fv.c  fft_radix16_macros.h  fft_radix16_macrosAVX2.h  fft_radix16_macrosAVX512.h  fft_radix16_macrosSSE2.h  fft_radix16_tw_packed.h  fft_radix16_uniform.h  radix16_CMakeLists.txt
src/radix17/: CMakeLists.txt  bench_final_r17.c  fft_radix17_dispatch.h  fft_radix17_genfft.h
src/radix19/: CMakeLists.txt  CMakeLists_r19.txt  bench_final_r19.c  fft_radix19_dispatch.h  fft_radix19_genfft.h
src/radix2/: CMakeLists.txt  PureSoA.md  fft_conversion_utils.h  fft_radix2_bv.c  fft_radix2_bv_parallel.c  fft_radix2_dif_dispatch.h  fft_radix2_dispatch.h  fft_radix2_fv.c  fft_radix2_macros.h  (+5 more)
test/: CMakeLists.txt  bench_codelets.c  bench_factorize.c  bench_full_fft.c  bench_il.c  bench_recursive.c  bench_walk.c  benchmark_prefetch.c  diag_5000.c  diag_plan.c  main.c  results.md  test_fft_conversions.c  test_mixedRadixFFT.cpp  twiddle_tests.c  vfft_calibration.txt  vfft_wisdom.txt
(+5812 files in other folders)
